--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,7 @@ body {
 
 label {
   margin: 0 !important;
+
 }
 
 .btn-trans {
@@ -79,4 +80,15 @@ input[type=checkbox]:checked ~ label:before {
   width: 100%;
   height: 100%;
   background-color: rgba(1, 1, 1, 0.7);
+}
+
+.vertical-align {
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  bottom: 50%;
 }
