--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,55 +11,55 @@
     <script src="https://use.fontawesome.com/0080c1af9b.js"></script>
   </head>
   <body>
-    <div class="row">
-      <h1 class="col-10"><%= title %></h1>
-      <button id="add-btn" type="button" class="btn p-0 btn-trans col-1">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-      </button>
-      <button type="button" class="btn p-0 btn-trans col-1">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
-    </div>
-    <table class="table table-striped table-hover table-responsive text-center">
-      <thead>
-        <tr>
-            <th class="check">
-              <input id="check-all" type="checkbox" name="check-all" class="check-box"/>
-              <label for="check-all"></label>
-            </th>
-            <th>thing</th>
-            <th>due</th>
-            <th>del</th>
-            <th>edit</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for ( var i = 0 ; i < data.length ; i++){ %>
+    <div class="card">
+      <div class="card-header row m-0 bg-white">
+        <h3 class="col-10 m-0 p-0"><%= title %></h3>
+        <button id="add-btn" type="button" class="btn p-0 btn-trans col-1">
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </button>
+        <button type="button" class="btn p-0 btn-trans col-1">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+      </div>
+      <table class="table table-hover text-center p-0 m-0">
+        <thead class="thead-inverse">
           <tr>
-              <td class="check">
-                <input id="check<%= i %>" name="check" type="checkbox" class="check-box" />
-                <label for="check<%= i %>"></label>
-              </td>
-              <td>
-                <%= data[i].thing  %>
-              </td>
-              <td>
-                <%= data[i].due  %>
-              </td>
-              <td>
-                <button type="button" class="btn text-danger p-0 btn-trans" onclick="Delete('<%= data[i].id  %>');">
-                  <i class="fa fa-times" aria-hidden="true"></i>
-                </button>
-              </td>
-              <td>
-                <button type="button" class="btn p-0 btn-trans" onclick="Edit('<%= data[i].id  %>', '<%= data[i].thing  %>', '<%= data[i].due  %>');">
-                  <i class="fa fa-pencil" aria-hidden="true"></i>
-                </button>
-              </td>
+              <th class="check">
+                <input id="check-all" type="checkbox" name="check-all" class="check-box"/>
+                <label for="check-all"></label>
+              </th>
+              <th>thing</th>
+              <th>due</th>
+              <th></th>
           </tr>
-        <% } %>
-      </tbody>
-  </table>
+        </thead>
+        <tbody>
+          <% for ( var i = 0 ; i < data.length ; i++){ %>
+            <tr>
+                <td class="check">
+                  <input id="check<%= i %>" name="check" type="checkbox" class="check-box" />
+                  <label for="check<%= i %>"></label>
+                </td>
+                <td>
+                  <%= data[i].thing  %>
+                </td>
+                <td>
+                  <%= data[i].due  %>
+                </td>
+                <td>
+                  <button type="button" class="btn p-0 btn-trans" onclick="Edit('<%= data[i].id  %>', '<%= data[i].thing  %>', '<%= data[i].due  %>');">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                  </button>
+                  <button type="button" class="btn text-danger p-0 btn-trans" onclick="Delete('<%= data[i].id  %>');">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </button>
+                </td>
+            </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
+    
   <div id="cover">
     <div id="add-block" class="container form-block">
       <button id="clz-btn-1" type="button" class="btn text-danger p-0 btn-trans btn-clz" onclick="hideAll()">
@@ -103,9 +103,11 @@
     </div>
 
     <div id="del-block" class="container form-block">
-      <h4 class="card-title">Are you sure?</h4>
-      <button id="yes" type="button" class="block-btn">yes</button>
-      <button id="no" type="button" class="block-btn" onclick="hideAll()">no</button>
+      <h4 class="card-title pt-3 pb-3">Are you sure?</h4>
+      <div class="vertical-align">
+        <button id="yes" type="button" class="block-btn">yes</button>
+        <button id="no" type="button" class="block-btn" onclick="hideAll()">no</button>
+      </div>
     </div>
   </div>
   <script>
